@@ -1,3 +1,10 @@
+2008-06-04  Chris Metcalf  <cmetcalf@tilera.com>
+
+	* lexsup.c (option_values): Add OPTION_NO_WARN_FATAL.
+	(ld_options): Add entry for --no-fatal-warnings.
+	(parse_args): Handle OPTION_NO_WARN_FATAL.
+	* ld.texinfo (Options): Document new command line switch.
+
 2008-06-04  Alan Modra  <amodra@bigpond.net.au>
 
 	* emultempl/spuelf.em (spu_elf_relink): Correct --no-auto-overlay arg.
